--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="col-md-4">
                     <div class="header-social-icons">
                         <ul>
-                            <li><a href="https://api.whatsapp.com/send/?phone=919645708910&"><i class="fa fa-whatsapp"></i></a></li>
+                            <li><a href="https://api.whatsapp.com/send/?phone=919645708910"><i class="fa fa-whatsapp"></i></a></li>
                             <li><a href="https://www.instagram.com/__shahul__sha__"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://www.facebook.com/Shahul Bin Musthafa"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="https://github.com/shahulvkd"><i class="fa fa-github"></i></a></li>
@@ -118,7 +118,7 @@
                             <h2>About Me</h2>
                         </div>
 
-                        <p>Hello! I’m Shahul Hameed. Recently BCA Graduate from University Of Calicut at 2022 and also done Software testing at Luminar Technolab.To obtain a fresher position as a software tester in a fast-paced organization where technical skills and creative thinking are useful.
+                        <p>Hello! I’m Shahul Hameed. Recently BCA Graduate from University OfCalicut at 2022 and also done Software testing at Luminar Technolab.To obtain a fresher position as a software tester in a fast-paced organization where technical skills and creative thinking are useful.
                         </p>
 
                         <ul class="profile-menu">
@@ -126,7 +126,7 @@
                             <li><span>Date of birth: </span> 03 April 2001</li>
                             <li><span>Nationality: </span> INDIA</li>
                             <li><span>Address: </span> Thrissur, Kerala</li>
-                            <li><span>Phone: </span> 91- 9645708910</li>
+                            <li><span>Phone: </span> +91- 9645708910</li>
                             <li><span>E-Mail: </span> shahulvkd7@gmail.com</li>
                         </ul>
                     </div>
