--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 
                                 <!--=== Single Skill Strat ===-->
                                 <div class="skillbar" data-percent="95%">
-                                    <div class="title">TEST NG</div>
+                                    <div class="title">TEST-NG</div>
                                     <div class="count-bar color-1">
                                         <div class="count"></div>
                                     </div>
